# fastapi-tutorial

./: .gitignore  README.md  README.rst  pyproject.toml
fastapi_tutorial/01_first_steps/: main.py
fastapi_tutorial/02_path_parameters/: README.md  main.py
fastapi_tutorial/l02_path_parameters/: README.md
fastapi_tutorial/l03_query_parameters/: README.md  main.py
fastapi_tutorial/l04_request_body/: README.md  main.py
fastapi_tutorial/l40_testing/: README.md  main.py
fastapi_tutorial/section/ab_path_parameters/: enums.py  main.py  order_matters.py
fastapi_tutorial/section/ac_query_parameters/: main.py  optional_parameters.py  required_query_parameters.py
fastapi_tutorial/section/ad_request_body/: main.py
fastapi_tutorial/section/ae_query_param_str_vldn/: default_value.py  deprecated_param.py  exclude_from_openapi.py  main.py  metadata.py  param_alias.py  query_param_list.py  required_w_ellipsis.py  required_w_none.py
fastapi_tutorial/section/b_path_parameters/: file_path.py
tests/l40_testing/: test_main.py
