[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = "Project to follow the official FastAPI Tutorial (https://fastapi.tiangolo.com/tutorial/)"
authors = ["alex carvalho <alex.carvaho.data@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.78.0"}
mypy = "^0.950"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = '**/*.py'
