[tool.poetry]
name = "fastapi-tutorial"
version = "0.4.1"
description = "Project to follow the official FastAPI tutorial [https://fastapi.tiangolo.com/tutorial/]"
authors = ["alex carvalho <allex.carvalho@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "fastapi_tutorial"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {version = "~0.101", extras = ["all"]}


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
